[#00] fix (task.card) -> make assigned-icon align correctly next to the buttons

--- a/assets/app/authenticated/task/card/task.card.style.scss
+++ b/assets/app/authenticated/task/card/task.card.style.scss
@@ -20,7 +20,8 @@
   .btn {
     font-size: 20px;
 
-    + .btn {
+    + .btn,
+    + .assigned {
       margin-left: 8px;
     }
 
